--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  build_and_test:
+  compile:
     name: Compile Example PDF
     runs-on: ubuntu-latest
     steps:
@@ -17,8 +17,23 @@ jobs:
       - uses: typst-community/setup-typst@v4
       - name: Compile example PDF
         run: typst compile main.typ
-      - name: Upload PDF artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v4
         with:
-          name: example
           path: main.pdf
+  deploy_pages:
+    name: Deploy to Pages
+    needs:
+      - compile
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
